--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+    <header>
+      <ul>
+        <li><a href="/">EQManager</a></li>
+        <li><a href="/account">account</a></li>
+        <li><a href="add">add</a></li>
+      </ul>
+    </header>
+
     <%= yield %>
+
+    <footer>
+
+    </footer>
   </body>
 </html>
