--- a/app/views/home/add.html.erb
+++ b/app/views/home/add.html.erb
@@ -1,1 +1,7 @@
 <h1>add</h1>
+
+<!--分類の追加-->
+<%= link_to '分類登録', "/classifications/new" %>
+
+<!--機材の追加-->
+<%= link_to '機材登録', "/equipment/new" %>
