--- a/app/views/home/add.html.erb
+++ b/app/views/home/add.html.erb
@@ -4,4 +4,4 @@
 <%= link_to '分類登録', "/classifications/new" %>
 
 <!--機材の追加-->
-<%= link_to '機材登録', "/equipment/new" %>
+<%= link_to '機材登録', "/equips/new" %>
