実行可能に修正 borrows追加

--- a/app/views/borrows/_form.html.erb
+++ b/app/views/borrows/_form.html.erb
@@ -11,20 +11,20 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :group_user_id %>
-    <%= form.number_field :group_user_id %>
-  </div>
+<!--  <div class="field">-->
+    <%#= form.label :group_user_id %>
+    <%#= form.number_field :group_user_id %>
+<!--  </div>-->
 
   <div class="field">
     <%= form.label :equip_id %>
     <%= form.number_field :equip_id %>
   </div>
 
-  <div class="field">
-    <%= form.label :return_day %>
-    <%= form.date_select :return_day %>
-  </div>
+<!--  <div class="field">-->
+    <%#= form.label :return_day %>
+    <%#= form.date_select :return_day %>
+<!--  </div>-->
 
   <div class="actions">
     <%= form.submit %>
