機材一覧 実装

--- a/app/views/borrows/_form.html.erb
+++ b/app/views/borrows/_form.html.erb
@@ -17,8 +17,8 @@
 <!--  </div>-->
 
   <div class="field">
-    <%= form.label :equip_id %>
-    <%= form.number_field :equip_id %>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
   </div>
 
 <!--  <div class="field">-->
