--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <li><a href="/">EQManager</a></li>
         <li><a href="/account">account</a></li>
         <li><a href="/add">add</a></li>
+        <li><a href="/equip_list">機材一覧</a></li>
       </ul>
     </header>
 
