--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,3 +5,24 @@
 <% end %>
 
 <!--<p><%#= @param %></p>-->
+<% if @equips then %>
+  <table>
+    <thead>
+    <tr>
+      <th>ユーザー名</th>
+      <th>機材名</th>
+      <th>借りた日</th>
+      <th colspan="3"></th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <% @equips.each do |equip| %>
+      <tr>
+        <td><%= course.name %></td>
+        <td><%= link_to 'Show', courses_show_path(course.id) %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+<% end %>
