グループ参加機能実装

--- a/app/views/borrows/show.html.erb
+++ b/app/views/borrows/show.html.erb
@@ -15,5 +15,5 @@
   <%= @borrow.return_day %>
 </p>
 
-<%= link_to 'Edit', edit_borrow_path(@borrow) %> |
-<%= link_to 'Back', borrows_path %>
+<!--<%#= link_to 'Edit', edit_borrow_path(@borrow) %> |-->
+<%#= link_to 'Back', borrows_path %>
