--- a/app/views/home/account.html.erb
+++ b/app/views/home/account.html.erb
@@ -9,6 +9,7 @@
 <%= link_to 'Edit', edit_user_path(current_user) %>
 <h2>Group:  <%= @gu.group.name %></h2>
 <%= link_to 'グループ作成', "/groups/new" %>
+<%= link_to 'グループ参加', "/group_user/new" %>
 
 <table>
   <thead>
