--- a/app/views/home/group_add.html.erb
+++ b/app/views/home/group_add.html.erb
@@ -1,3 +1,4 @@
 <h2>グループに加入するかグループを作成してください</h2>
 <%#= link_to 'グループ加入', new_classification_path %>
 <%= link_to 'グループ作成', "/groups/new" %>
+<%= link_to 'グループ参加', "/group_user/new" %>
