--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
         <li><a href="/account">account</a></li>
         <li><a href="/add">add</a></li>
         <li><a href="/equip_list">機材一覧</a></li>
+        <li><a href="/history">貸し出し履歴</a></li>
       </ul>
     </header>
 
