--- a/app/views/classifications/new.html.erb
+++ b/app/views/classifications/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', classification: @classification %>
 
-<%= link_to 'Back', classifications_path %>
+<%#= link_to 'Back', classifications_path %>
