--- a/app/views/classifications/show.html.erb
+++ b/app/views/classifications/show.html.erb
@@ -5,5 +5,5 @@
   <%= @classification.name %>
 </p>
 
-<%= link_to 'Edit', edit_classification_path(@classification) %> |
-<%= link_to 'Back', classifications_path %>
+<!--<%#= link_to 'Edit', edit_classification_path(@classification) %> |-->
+<%#= link_to 'Back', classifications_path %>
