--- a/app/views/equips/show.html.erb
+++ b/app/views/equips/show.html.erb
@@ -20,5 +20,5 @@
   <%= @equip.classification_id %>
 </p>
 
-<%= link_to 'Edit', edit_equip_path(@equip) %> |
-<%= link_to 'Back', equips_path %>
+<!--<%#= link_to 'Edit', edit_equip_path(@equip) %> |-->
+<%#= link_to 'Back', equips_path %>
